// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-type-check > should allow to configure fork-ts-checker-webpack-plugin options 1`] = `
{
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            {
              "file": "**/*.(spec|test).ts",
            },
            {
              "file": "**/node_modules/**/*",
            },
            {
              "file": "src/**/*.ts",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "configFile": "<ROOT>/packages/plugin-type-check/tests/tsconfig.json",
          "memoryLimit": 8192,
          "typescriptPath": "<ROOT>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
}
`;

exports[`plugin-type-check > should apply fork-ts-checker-webpack-plugin correctly 1`] = `
{
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            {
              "file": "**/*.(spec|test).ts",
            },
            {
              "file": "**/node_modules/**/*",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "configFile": "<ROOT>/packages/plugin-type-check/tests/tsconfig.json",
          "memoryLimit": 8192,
          "typescriptPath": "<ROOT>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
}
`;

exports[`plugin-type-check > should disable type checker when enable is false 1`] = `{}`;

exports[`plugin-type-check > should only apply one ts-checker plugin when there is multiple targets 1`] = `
{
  "plugins": [
    ForkTsCheckerWebpackPlugin {
      "options": {
        "issue": {
          "exclude": [
            {
              "file": "**/*.(spec|test).ts",
            },
            {
              "file": "**/node_modules/**/*",
            },
          ],
        },
        "logger": {
          "error": [Function],
          "log": [Function],
        },
        "typescript": {
          "configFile": "<ROOT>/packages/plugin-type-check/tests/tsconfig.json",
          "memoryLimit": 8192,
          "typescriptPath": "<ROOT>/node_modules/<PNPM_INNER>/typescript/lib/typescript.js",
        },
      },
    },
  ],
}
`;
